[gd_scene load_steps=4 format=3 uid="uid://eov0jbiy6tf0"]

[ext_resource type="Script" uid="uid://c3t6wwhorsg0q" path="res://scripts/exit_scene.gd" id="1_a084e"]
[ext_resource type="Texture2D" uid="uid://bsssbydx6wcu5" path="res://game/assets/objects/background_map.png" id="2_htfyi"]

[sub_resource type="FontFile" id="FontFile_30vdr"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0

[node name="exit_scene" type="CanvasLayer"]
script = ExtResource("1_a084e")

[node name="Panel" type="Panel" parent="."]
offset_right = 1150.0
offset_bottom = 641.0

[node name="BackgroundMap" type="Sprite2D" parent="."]
position = Vector2(577.5, 322)
scale = Vector2(1.23052, 1.16667)
texture = ExtResource("2_htfyi")

[node name="Closing" type="RichTextLabel" parent="."]
offset_left = 206.0
offset_top = 59.0
offset_right = 964.0
offset_bottom = 554.0
theme_override_colors/default_color = Color(0.015195, 0.0842314, 0.140478, 1)
theme_override_fonts/normal_font = SubResource("FontFile_30vdr")
theme_override_font_sizes/normal_font_size = 40
text = "Thank you for exploring the Kentucky Wilderness with John. Have you collected enough information to determine why 1816 is the Year Without a Summer?"
fit_content = true

[node name="Restart_Button" type="Button" parent="."]
offset_left = 608.0
offset_top = 421.0
offset_right = 974.0
offset_bottom = 504.0
text = "Restart Game"
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="."]
offset_left = 608.0
offset_top = 524.0
offset_right = 974.0
offset_bottom = 607.0
text = "Quit Game"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Restart_Button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Restart_Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Restart_Button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_exit_button_pressed"]
